Migrate `requirejs` scripted test to Play 2.1.0 and the plugin 0.2-RC4-SNAPSHOT